--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -9,12 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
     "vue": "^3.4.21",
-    "vue-csspin": "^0.1.12",
-    "vue-router": "^4.3.2",
-    "vuex": "^4.0.2"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
